--- a/_includes/420/9-17-2019.md
+++ b/_includes/420/9-17-2019.md
@@ -1,5 +1,97 @@
 #### _9-17-2019_
-<audio controls>
-  <source src="/Audio/420-9-17-2019.mp3" type="audio/mpeg">
-Your browser does not support the audio element.</audio>
 
+## How to get Feedback
+[Review sites](https://cs.millersville.edu/~wkillian/420-reviews/view.php)
+
+## Overview Design Patterns
+* Design pattern general repeatable solution to a commonly occurring problem in software design
+* Is not a finished design that can be transformed into code
+* Is a description or template for how to solve a problem
+
+### Criticisms
+* Targets the wrong problem 
+* Lacks formal foundations 
+* Leads to inefficiency 
+* Does not differ from other abstractions
+* Only applicable to OOP
+
+### Categories of Design Patterns
+* Creational design patterns
+  * All about class instantiation
+  * Composed of class creation (inheritance) and object creation (delegation)
+* Structural Design
+  * Implementation structure
+  * Class and Object composition
+  * inheritance
+* Behavioral Design
+  * All about class object communication
+
+### 6 Creational Patterns
+* Abstract Factory
+  * Creates an instance of several families of classes
+* Builder
+  * Separates object construction from its representation
+* Factory method
+  * Creates an instance of several derived classes
+* Object Pool
+  * Avoid expensive acquisitions and release of resources by recycling objects no longer in use
+* Prototype
+  * Fully initialized instance to be copied or cloned
+* Singleton
+  * Class of which only a single instance can exist
+
+### 8 Structural Patterns
+* Adapter
+  * Match interfaces of different classes
+* Bridge 
+  * Separate an objects interface from implementation
+* Composite
+  * Tree structure of simple and composite objects
+* Decorator
+  * Add responsibilities to objects dynamically
+  * Wrapper for other classes, like Drawable
+* Flyweight
+  * Fine-Grained instance used for efficient sharing
+* Facade
+  * Single class that represents and entire subsystem
+* Private Class Data
+  * Restricts accessor/mutator access
+* Proxy
+  * Object representing another object
+
+### Behavioral Patterns
+* Iterator
+  * Abstract model that we use
+  * C++ we have increment, compare and dereference
+    * Called a forward iterator
+* Mediator  
+  * Defines simplified communication between classes
+* Memento 
+  * Capture and restore an objects internal state
+* Chain of Responsibility
+  * Way of passing request between chain of events
+* Command 
+  * Encapsulate request as an object
+* Interpreter
+  * Way to include language elements in a program
+* Null object- acts as default value for an object
+* Observer- Way of notifying change to a number of classes
+  * If class is moved around with arrows then every arrow needs to know its end location has moved
+* State- Alter an objects behavior when its state changes
+* Strategy- Encapsulates an algorithm inside a class
+* Template method- Defer the exact steps of an algorithm to a subclass
+* Visitor- Defines new operation to a class without change
+  * BST that needs to be printed- tree should not know how to print itself but we can write a visitor that goes in order and prints 
+
+#### Abstract Factory
+* Provides Interface for creating families of related or dependant objects without specifying their class
+* A hierarchy that encapsulates: many possible "platforms" and the construction of a suite of "products"
+* the **new** operator is considered harmful
+#### Builder
+* Intent- separate the construction of complex object from its representation so that the same construction process can create 
+* Acts as a dispatcher of things that need made
+* Think StringBuilder, can append strings/ints/chars and at the end we'll get a toString
+#### Factory Method
+* Define an interface for creating an object
+* Defining a virtual constructor
+* 
