--- a/_includes/450/9-23-2019.md
+++ b/_includes/450/9-23-2019.md
@@ -2,3 +2,21 @@
 <audio controls>
   <source src="/Audio/450-9-23-2019.mp3" type="audio/mpeg">
 Your browser does not support the audio element.</audio>
+
+## Dominance
+* One heuristic gives value greater than or equal to other heuristic
+* Realistic estimates
+* If we have 2 heuristics that do decently in different situations, can combine them 
+## Weighted A* 
+* Speed up search at the expense of optimality
+* Take admissable heuristic, "Inflate" by multiple of alpha > 1 then perform A* search as usual 
+* Fewer nodes tend to get expanded but the resulting solution may be suboptimal
+* Note: Dr. Schwartz prefers optimality 
+  * She does not like weighted A* 
+
+## Missionary and Cannibal Problem Revisit
+* 3 M's, 3 C's, and a boat 
+* Possible Heuristics (Needs to be admissable)
+  * Number of people on the left-1 to stay admissable, don't wanna overestimate
+  * Relaxing constraints- number of people/2 since 2 can fit in boat at once
+  * First heuristic will dominate second one though
