--- a/_includes/420/9-24-2019.md
+++ b/_includes/420/9-24-2019.md
@@ -1,1 +1,38 @@
 #### _9-24-2019_
+
+## Back on the design pattern grind
+* Command
+    * Encapsulate a request as an object, thereby letting you parameterize clients with different requests, queue, or log requests and support undoable operations
+    * Promote "Invocation of a method on an object" to full objects
+
+## Tasks
+* For every test, use a formal testing framework that is appropriate for our language
+* Ensure that nothing can be merged to dev without all tests running in cloud (continuous integration)
+    * travisCI, circleCI, AzurePiplines
+* Test as close to all code as possible
+* Artifact improvement- Actually comment on tasks in GH for how much time was spent, PM should be able to look at project Kanban and get birds eye view on everything
+
+* Need a Graphical User Environment
+* Need attributes
+    * create edit and delete them
+* Create edit and delete relationships
+    * Deleting class removes all relationships
+
+
+[ animal , dog , cat ]
+=======
+dog {
+    parent: 0;
+}
+=======
+dog {
+    parent: UMLItem animal;
+}
+
+Thoughts on Technical Side of Features
+* Attributes
+    * comma separated attribute entries so that we don't have to pick a class every time
+    * 
+* Relationships
+    * Multiple parents
+    * 
