--- a/_includes/450/10-4-2019.md
+++ b/_includes/450/10-4-2019.md
@@ -4,4 +4,9 @@
 Your browser does not support the audio element.</audio>
 
 ## Constraint networks
-* 
+* When TODO list is empty then we are Arc consistent
+* Solution comes when one variable left in each set
+* Empty set means no solution
+
+## Domain splitting
+* if Multiple values remaining, pick one and split it into 2 problems
