--- a/_includes/475/10-8-2019.md
+++ b/_includes/475/10-8-2019.md
@@ -44,4 +44,15 @@ Online testing
     * Allows you to see which things are getting chosen, nerf overpowered items etc
     * Do this with really any software, see how people are using your software
 * Q&A- Generally done in-house, if a playtester finds a bug its a bonus but bug finding should be a dedicated search from people on the team
+
+Particle Systems
+* Emits small objects that are short-lived
+* Used for dust, fires, explosions, clouds, snow
+* Emitter is controlled by the Shape module
+
+Renderer Module
+* Controls actual particles
+* Render mode controls how the particles are drawn and material controls what they look like
+* Save processing power by using 2d "Billboard" particles
+* Stretched billboard allows the sprites to always face the camera
 * 
